solved horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,8 @@ body {
     margin-left: 20px;
 }
 .nav__section{
-    width: 100%;
+    width: 95%;
+    margin-left: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -207,7 +208,8 @@ article{
   }
 
 .container{
-    width: 100%;
+    width: 95%;
+    margin-left: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -297,9 +299,11 @@ h3{
     }
     .ul__item{
         width: 60%;
+        margin-left: 0;
     }
     .reading__ul{
         width: 60%;
+       
         display: flex;
         flex-direction: column;
         justify-content: center;
